Reduce Font Size in Settings Dialog to avoid overlapping of rating count

--- a/udemy4/src/app/dialog-settings/dialog-settings.component.css
+++ b/udemy4/src/app/dialog-settings/dialog-settings.component.css
@@ -16,7 +16,7 @@
 }
 
 .prominentValue {
-    font-size: 8vh;
+    font-size: 10vw;
 }
 
 /* mouse over for desktop computer */
@@ -45,4 +45,8 @@
 label {
     font-size: 4vh;
     line-height: 150%;
+}
+
+.ratingCountLabel {
+    padding-right: 0;
 }
